--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-<!DOCTYPE html><html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>To My Love, Fina ❤️</title>
-  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+<!doctype html>
+<html lang="en"> 
+ <head> 
+  <meta charset="UTF-8"> 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+  <title>To My Love, Fina ❤️</title> 
+  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&amp;display=swap" rel="stylesheet"> 
   <style>
     body {
       margin: 0;
@@ -42,14 +43,8 @@
       font-size: 1.5rem;
     }
     @keyframes floatHearts {
-      0% {
-        transform: translateY(0) scale(1);
-        opacity: 1;
-      }
-      100% {
-        transform: translateY(-200px) scale(1.5);
-        opacity: 0;
-      }
+      0% { transform: translateY(0) scale(1); opacity: 1; }
+      100% { transform: translateY(-200px) scale(1.5); opacity: 0; }
     }
     .heart:nth-child(1) { left: 10%; animation-delay: 0s; }
     .heart:nth-child(2) { left: 30%; animation-delay: 1s; }
@@ -102,6 +97,12 @@
       border-radius: 12px;
       width: 100%;
     }
+    video {
+      border-radius: 12px;
+      width: 100%;
+      max-height: 300px;
+      outline: none;
+    }
     button {
       padding: 10px 20px;
       background-color: #db2777;
@@ -143,10 +144,7 @@
       animation-delay: 0.3s;
     }
     @keyframes fadeInUp {
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
+      to { opacity: 1; transform: translateY(0); }
     }
     .lightbox {
       display: none;
@@ -165,9 +163,7 @@
       max-height: 90%;
       border-radius: 10px;
     }
-    .lightbox:target {
-      display: flex;
-    }
+    .lightbox:target { display: flex; }
     .close-lightbox {
       position: absolute;
       top: 20px;
@@ -177,108 +173,90 @@
       text-decoration: none;
       font-weight: bold;
     }
-  </style>
-</head>
-<body>
-  <audio autoplay loop hidden>
-    <source src="https://cdn.pixabay.com/audio/2022/12/07/audio_d8e0f51e82.mp3" type="audio/mpeg">
-  </audio>
-  <div class="hearts">
-    <div class="heart">💖</div>
-    <div class="heart">❤️</div>
-    <div class="heart">💘</div>
-    <div class="heart">💕</div>
-    <div class="heart">💞</div>
-    <div class="sparkle"></div>
-    <div class="sparkle"></div>
-    <div class="sparkle"></div>
-    <div class="sparkle"></div>
-    <div class="sparkle"></div>
-  </div>
-  <div id="falling-hearts-container"></div>
-  <h1>To My Love, Fina ❤️</h1>
-  <p>A little place on the internet, just for you.</p>  
+  </style> 
+ </head> 
+ <body> 
+  <audio autoplay loop hidden> 
+   <source src="https://cdn.pixabay.com/audio/2022/12/07/audio_d8e0f51e82.mp3" type="audio/mpeg"> 
+  </audio> 
+  <div class="hearts"> 
+   <div class="heart">💖</div> 
+   <div class="heart">❤️</div> 
+   <div class="heart">💘</div> 
+   <div class="heart">💕</div> 
+   <div class="heart">💞</div> 
+   <div class="sparkle"></div> 
+   <div class="sparkle"></div> 
+   <div class="sparkle"></div> 
+   <div class="sparkle"></div> 
+   <div class="sparkle"></div> 
+  </div> 
+  <div id="falling-hearts-container"></div> 
+  <h1>To My Love, Fina ❤️</h1> 
+  <p>A little place on the internet, just for you.</p> 
+  <div class="card"> 
+   <h2>Our Story</h2> 
+   <ul style="text-align: left;"> 
+    <li>✨ We met and everything changed forever.</li> 
+    <li>🌹 We haven't met yet — but our hearts already have.</li> 
+    <li>🌍 Soon, our first meeting will be the most special moment ever.</li> 
+    <li>💖 From then to now — every day, I love you more.</li> 
+   </ul> 
+  </div> 
+  <div class="card"> 
+   <h2>Gallery 📸</h2> 
+   <div class="gallery"> 
+    <div><a href="#img1"><img src="https://files.catbox.moe/n62ear.jpeg"></a><div class="caption">You, so lovely 💖</div></div> 
+    <div><a href="#img2"><img src="https://files.catbox.moe/iheutt.jpeg"></a><div class="caption">My forever crush 😍</div></div> 
+    <div><a href="#img3"><img src="https://files.catbox.moe/1v92j1.jpeg"></a><div class="caption">Our love in pictures 💫</div></div> 
+    <div><a href="#img4"><img src="https://files.catbox.moe/okfjgu.jpeg"></a><div class="caption">Can't wait to meet you 💞</div></div> 
+    <div><a href="#img5"><img src="https://files.catbox.moe/n3tays.jpeg"></a><div class="caption">Your smile lights my world 🌟</div></div>
+    <div><a href="#img6"><img src="https://files.catbox.moe/7decad.jpeg"></a><div class="caption">My heart belongs to you ❤️</div></div>
+    <div><a href="#img7"><img src="https://files.catbox.moe/uungbr.jpeg"></a><div class="caption">Beautiful inside and out 💐</div></div>
+    <!-- ✅ Added your new image -->
+    <div><a href="#img8"><img src="https://files.catbox.moe/qwqrpq.jpeg"></a><div class="caption">The love of my life 💖</div></div>
+   </div> 
+  </div> 
 
-  <div class="card">
-    <h2>Our Story</h2>
-    <ul style="text-align: left;">
-      <li>✨ We met and everything changed forever.</li>
-      <li>🌹 We haven't met yet — but our hearts already have.</li>
-      <li>🌍 Soon, our first meeting will be the most special moment ever.</li>
-      <li>💖 From then to now — every day, I love you more.</li>
-    </ul>
-  </div>  
+  <!-- Lightboxes -->
+  <div id="img1" class="lightbox"><a href="#" class="close-lightbox">×</a><img src="https://files.catbox.moe/n62ear.jpeg"></div> 
+  <div id="img2" class="lightbox"><a href="#" class="close-lightbox">×</a><img src="https://files.catbox.moe/iheutt.jpeg"></div> 
+  <div id="img3" class="lightbox"><a href="#" class="close-lightbox">×</a><img src="https://files.catbox.moe/1v92j1.jpeg"></div> 
+  <div id="img4" class="lightbox"><a href="#" class="close-lightbox">×</a><img src="https://files.catbox.moe/okfjgu.jpeg"></div> 
+  <div id="img5" class="lightbox"><a href="#" class="close-lightbox">×</a><img src="https://files.catbox.moe/n3tays.jpeg"></div>
+  <div id="img6" class="lightbox"><a href="#" class="close-lightbox">×</a><img src="https://files.catbox.moe/7decad.jpeg"></div>
+  <div id="img7" class="lightbox"><a href="#" class="close-lightbox">×</a><img src="https://files.catbox.moe/uungbr.jpeg"></div>
+  <!-- ✅ Lightbox for your new image -->
+  <div id="img8" class="lightbox"><a href="#" class="close-lightbox">×</a><img src="https://files.catbox.moe/qwqrpq.jpeg"></div>
 
-  <div class="card">
-    <h2>Gallery 📸</h2>
-    <div class="gallery">
-      <div>
-        <a href="#img1"><img src="https://files.catbox.moe/n62ear.jpeg" alt="Gallery Image 1"></a>
-        <div class="caption">You, so lovely 💖</div>
-      </div>
-      <div>
-        <a href="#img2"><img src="https://files.catbox.moe/iheutt.jpeg" alt="Gallery Image 2"></a>
-        <div class="caption">My forever crush 😍</div>
-      </div>
-      <div>
-        <a href="#img3"><img src="https://files.catbox.moe/1v92j1.jpeg" alt="Gallery Image 3"></a>
-        <div class="caption">Our love in pictures 💫</div>
-      </div>
-      <div>
-        <a href="#img4"><img src="https://files.catbox.moe/okfjgu.jpeg" alt="Gallery Image 4"></a>
-        <div class="caption">Can't wait to meet you 💞</div>
-      </div>
-    </div>
-  </div>  
-
-  <div id="img1" class="lightbox">
-    <a href="#" class="close-lightbox">&times;</a>
-    <img src="https://files.catbox.moe/n62ear.jpeg" alt="Full Image 1">
-  </div>
-  <div id="img2" class="lightbox">
-    <a href="#" class="close-lightbox">&times;</a>
-    <img src="https://files.catbox.moe/iheutt.jpeg" alt="Full Image 2">
-  </div>
-  <div id="img3" class="lightbox">
-    <a href="#" class="close-lightbox">&times;</a>
-    <img src="https://files.catbox.moe/1v92j1.jpeg" alt="Full Image 3">
-  </div>
-  <div id="img4" class="lightbox">
-    <a href="#" class="close-lightbox">&times;</a>
-    <img src="https://files.catbox.moe/okfjgu.jpeg" alt="Full Image 4">
-  </div>  
-
-  <div class="card">
-    <h2>Love Letters ✉️</h2>
-    <p><em>“Every moment with you feels like home.”</em></p>
-    <p><em>“You are my sunshine on every cloudy day.”</em></p>
-  </div>  
-
-  <div class="card">
-    <h2>Our Playlist 🎶</h2>
-    <iframe
-      src="https://open.spotify.com/embed/playlist/37i9dQZF1DXcBWIGoYBM5M"
-      height="80"
-      allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-      loading="lazy"
-    ></iframe>
-  </div>  
-
-  <div class="card">
-    <h2>Days Together 🗓️</h2>
-    <p id="daysTogether"></p>
-  </div>  
-
-  <!-- ✅ Updated Secret Message block -->
-  <div class="card">
-    <h2>Secret Message 🔒</h2>
-    <button id="secretBtn">Click if you're sad 😢</button>
+  <div class="card"> 
+   <h2>Special Video❤️😘 🎥</h2>
+   <video controls>
+     <source src="https://files.catbox.moe/jdvtu8.mp4" type="video/mp4">
+   </video>
+   <div class="caption">Like Jidenna sings… I’ll run to you, always 🦌❤️</div>
   </div>
 
+  <div class="card"> 
+   <h2>Love Letters ✉️</h2> 
+   <p><em>“Every moment with you feels like home.”</em></p> 
+   <p><em>“You are my sunshine on every cloudy day.”</em></p> 
+  </div> 
+  <div class="card"> 
+   <h2>Our Playlist 🎶</h2> 
+   <iframe src="https://open.spotify.com/embed/playlist/37i9dQZF1DXcBWIGoYBM5M" height="80"></iframe> 
+  </div> 
+  <div class="card"> 
+   <h2>Days Together 🗓️</h2> 
+   <p id="daysTogether"></p> 
+  </div> 
+  <div class="card"> 
+   <h2>Secret Message 🔒</h2> 
+   <button id="secretBtn">Click if you're sad 😢</button> 
+  </div> 
   <footer style="margin-top: 50px; font-size: 0.9rem; color: #6b7280;">
-    Made with ❤️ for Fina — Forever yours.
-  </footer>  
-
+    Made with ❤️ for Fina — Forever yours. 
+  </footer> 
   <script>
     const startDate = new Date("2025-07-17");
     const today = new Date();
@@ -286,7 +264,6 @@
     const daysTogether = Math.ceil(diffTime / (1000 * 60 * 60 * 24));
     document.getElementById("daysTogether").textContent = `We've been together for ${daysTogether} days 🥰`;
 
-    // Generate falling hearts
     const container = document.getElementById('falling-hearts-container');
     for (let i = 0; i < 30; i++) {
       const heart = document.createElement('div');
@@ -299,10 +276,9 @@
       container.appendChild(heart);
     }
 
-    // ✅ Working Secret Message alert for phones
     document.getElementById("secretBtn").addEventListener("click", function () {
       alert("Beb, every heartbeat of mine whispers your name. Even though we haven't met yet, you're already the most beautiful part of my world. I count the days until I can hold you close and tell you — I'm yours, completely.\n\nWith all my love,\nEvans ❤️");
     });
-  </script>
-</body>
-  </html>
+  </script> 
+ </body>
+                           </html>
