--- a/index.html
+++ b/index.html
@@ -197,10 +197,11 @@
   <div class="card"> 
    <h2>Our Story</h2> 
    <ul style="text-align: left;"> 
-    <li>✨ We met and everything changed forever.</li> 
-    <li>🌹 We haven't met yet — but our hearts already have.</li> 
-    <li>🌍 Soon, our first meeting will be the most special moment ever.</li> 
-    <li>💖 From then to now — every day, I love you more.</li> 
+    <li>✨ From the moment we met, my heart knew it had found its home.
+    </li> 
+    <li>🌹 Every message, every laugh, every moment with you feels like magic.</li> 
+    <li>🌍 Distance means so little when someone means so much.</li> 
+    <li>💖 One day, we’ll look back and smile, knowing this was the beginning of forever.</li> 
    </ul> 
   </div> 
   <div class="card"> 
