--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+  <!doctype html>
 <html lang="en"> 
  <head> 
   <meta charset="UTF-8"> 
@@ -111,6 +111,7 @@
       border-radius: 8px;
       cursor: pointer;
       font-size: 1rem;
+      margin: 5px;
     }
     button:hover {
       background-color: #be185d;
@@ -197,8 +198,7 @@
   <div class="card"> 
    <h2>Our Story</h2> 
    <ul style="text-align: left;"> 
-    <li>✨ From the moment we met, my heart knew it had found its home.
-    </li> 
+    <li>✨ From the moment we met, my heart knew it had found its home.</li> 
     <li>🌹 Every message, every laugh, every moment with you feels like magic.</li> 
     <li>🌍 Distance means so little when someone means so much.</li> 
     <li>💖 One day, we’ll look back and smile, knowing this was the beginning of forever.</li> 
@@ -210,11 +210,10 @@
     <div><a href="#img1"><img src="https://files.catbox.moe/n62ear.jpeg"></a><div class="caption">You, so lovely 💖</div></div> 
     <div><a href="#img2"><img src="https://files.catbox.moe/iheutt.jpeg"></a><div class="caption">My forever crush 😍</div></div> 
     <div><a href="#img3"><img src="https://files.catbox.moe/1v92j1.jpeg"></a><div class="caption">Our love in pictures 💫</div></div> 
-    <div><a href="#img4"><img src="https://files.catbox.moe/okfjgu.jpeg"></a><div class="caption">Can't wait to meet you 💞</div></div> 
+    <div><a href="#img4"><img src="https://files.catbox.moe/okfjgu.jpeg"></a><div class="caption">Yours. Always. Forever. 💕</div></div> 
     <div><a href="#img5"><img src="https://files.catbox.moe/n3tays.jpeg"></a><div class="caption">Your smile lights my world 🌟</div></div>
     <div><a href="#img6"><img src="https://files.catbox.moe/7decad.jpeg"></a><div class="caption">My heart belongs to you ❤️</div></div>
     <div><a href="#img7"><img src="https://files.catbox.moe/uungbr.jpeg"></a><div class="caption">Beautiful inside and out 💐</div></div>
-    <!-- ✅ Added your new image -->
     <div><a href="#img8"><img src="https://files.catbox.moe/qwqrpq.jpeg"></a><div class="caption">The love of my life 💖</div></div>
    </div> 
   </div> 
@@ -227,7 +226,6 @@
   <div id="img5" class="lightbox"><a href="#" class="close-lightbox">×</a><img src="https://files.catbox.moe/n3tays.jpeg"></div>
   <div id="img6" class="lightbox"><a href="#" class="close-lightbox">×</a><img src="https://files.catbox.moe/7decad.jpeg"></div>
   <div id="img7" class="lightbox"><a href="#" class="close-lightbox">×</a><img src="https://files.catbox.moe/uungbr.jpeg"></div>
-  <!-- ✅ Lightbox for your new image -->
   <div id="img8" class="lightbox"><a href="#" class="close-lightbox">×</a><img src="https://files.catbox.moe/qwqrpq.jpeg"></div>
 
   <div class="card"> 
@@ -247,17 +245,36 @@
    <h2>Our Playlist 🎶</h2> 
    <iframe src="https://open.spotify.com/embed/playlist/37i9dQZF1DXcBWIGoYBM5M" height="80"></iframe> 
   </div> 
+
+  <!-- Countdown Card -->
+  <div class="card">
+    <h2>Countdown to Our Anniversary 💞</h2>
+    <p id="countdown"></p>
+  </div>
+
   <div class="card"> 
    <h2>Days Together 🗓️</h2> 
    <p id="daysTogether"></p> 
   </div> 
+
+  <!-- Updated Open When Card -->
   <div class="card"> 
-   <h2>Secret Message 🔒</h2> 
-   <button id="secretBtn">Click if you're sad 😢</button> 
+   <h2>Open when</h2> 
+   <button id="btnSad">Click when sad 😢</button> 
+   <button id="btnMiss">Click when missing me 💌</button> 
+   <button id="btnSleep">Click when can’t sleep 🌙</button> 
   </div> 
+
+  <!-- Restored Secret Message Card -->
+  <div class="card">
+    <h2>Secret Message 🔒</h2>
+    <button id="secretBtn">Click for a Sweet Secret🤭</button>
+  </div>
+
   <footer style="margin-top: 50px; font-size: 0.9rem; color: #6b7280;">
     Made with ❤️ for Fina — Forever yours. 
   </footer> 
+
   <script>
     const startDate = new Date("2025-07-17");
     const today = new Date();
@@ -277,9 +294,43 @@
       container.appendChild(heart);
     }
 
-    document.getElementById("secretBtn").addEventListener("click", function () {
-      alert("Beb, every heartbeat of mine whispers your name. Even though we haven't met yet, you're already the most beautiful part of my world. I count the days until I can hold you close and tell you — I'm yours, completely.\n\nWith all my love,\nEvans ❤️");
+    // Open When buttons
+    document.getElementById("btnSad").addEventListener("click", function () {
+      alert("Beb, every tear you shed is a piece of my heart crying with you. I wish I could be there to hold you close until the sadness melts away. You’re never alone, not even for a second. ❤️");
     });
+    document.getElementById("btnMiss").addEventListener("click", function () {
+      alert("I miss you more than words can ever say. Every moment without you is a countdown until I can see your smile again. You’re in my thoughts always, beb 💌");
+    });
+    document.getElementById("btnSleep").addEventListener("click", function () {
+      alert("Close your eyes, my love. Imagine my arms wrapped around you, my voice whispering sweet dreams in your ear. Sleep peacefully knowing my heart beats for you. 🌙❤️");
+    });
+
+    // Secret Message (restored)
+    document.getElementById("secretBtn").addEventListener("click", function () {
+      alert("You are my today and all of my tomorrows. If I could give you one thing, it would be the ability to see yourself through my eyes — only then would you realize how deeply, madly, and completely I love you. ❤️");
+    });
+
+    // Countdown to Anniversary
+    const anniversaryDate = new Date("2026-07-17");
+    function updateCountdown() {
+      const now = new Date();
+      const diff = anniversaryDate - now;
+      
+      if (diff <= 0) {
+        document.getElementById("countdown").textContent = "Happy Anniversary, my love! ❤️";
+        return;
+      }
+
+      const days = Math.floor(diff / (1000 * 60 * 60 * 24));
+      const hours = Math.floor((diff / (1000 * 60 * 60)) % 24);
+      const minutes = Math.floor((diff / (1000 * 60)) % 60);
+      const seconds = Math.floor((diff / 1000) % 60);
+
+      document.getElementById("countdown").textContent =
+        `${days} days, ${hours} hours, ${minutes} minutes & ${seconds} seconds until our anniversary 💖`;
+    }
+    setInterval(updateCountdown, 1000);
+    updateCountdown();
   </script> 
  </body>
-                           </html>
+                                                                              </html>
